<resources>
    <string name="app_name">Math Game</string>

    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="score">Score:</string>
    <string name="zero">0</string>
    <string name="life">Life:</string>
    <string name="three">3</string>
    <string name="time">Time: </string>
    <string name="sixty">60</string>
    <string name="hint">Please write your answer here</string>
    <string name="ok">OK</string>
    <string name="next_question">Next Question</string>
    <string name="question_right">Congratulations, Your answer is true</string>
    <string name="question_wrong">Sorry, your answer is wrong</string>
    <string name="timesup">Sorry! Time is up</string>
    <string name="congrats">Congratulations</string>
    <string name="scoreText">Score: 20</string>
    <string name="play_again">Play Again?</string>
    <string name="exit">Exit</string>
    <string name="game_over">Game Over</string>
</resources>