<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="75dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/addition" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/subtraction" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/multiplication" />
</LinearLayout>